Transpilador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> declaracoes
Rule 1     declaracoes -> declaracao
Rule 2     declaracoes -> declaracao bloco
Rule 3     declaracoes -> bloco
Rule 4     bloco -> ABRE_CHAVES declaracoes FECHA_CHAVES
Rule 5     bloco -> ABRE_CHAVES declaracao bloco FECHA_CHAVES
Rule 6     bloco -> ABRE_CHAVES impressao FECHA_CHAVES
Rule 7     bloco -> ABRE_CHAVES escrita impressao FECHA_CHAVES
Rule 8     bloco -> ABRE_CHAVES escrita escrita impressao FECHA_CHAVES
Rule 9     bloco -> ABRE_CHAVES escrita escrita expr impressao FECHA_CHAVES
Rule 10    bloco -> ABRE_CHAVES impressao param_cond PONTO_VIRGULA FECHA_CHAVES
Rule 11    bloco -> ABRE_CHAVES param_cond PONTO_VIRGULA impressao FECHA_CHAVES
Rule 12    bloco -> ABRE_CHAVES impressao expr FECHA_CHAVES
Rule 13    declaracao -> DUM param_cond bloco
Rule 14    declaracao -> declaracao DUM param_cond bloco
Rule 15    declaracao -> TO VARIAVEL IN TRACTUS ABRE_PARENTESES TOTUM VIRGULA TOTUM FECHA_PARENTESES bloco
Rule 16    declaracao -> TO VARIAVEL IN TRACTUS ABRE_PARENTESES BIP VIRGULA BIP FECHA_PARENTESES bloco
Rule 17    declaracao -> VARIAVEL OPERADOR_ATRIBUICAO expr PONTO_VIRGULA
Rule 18    declaracao -> VARIAVEL OPERADOR_ATRIBUICAO VERBUM PONTO_VIRGULA
Rule 19    declaracao -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL PONTO_VIRGULA
Rule 20    declaracao -> VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
Rule 21    declaracao -> VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
Rule 22    declaracao -> VARIAVEL OPERADOR_ATRIBUICAO BIP PONTO_VIRGULA
Rule 23    declaracao -> VARIAVEL OPERADOR_ATRIBUICAO funcao PONTO_VIRGULA
Rule 24    declaracao -> param VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
Rule 25    declaracao -> VARIAVEL OPERADOR_MAIS_IGUAL TOTUM
Rule 26    declaracao -> VARIAVEL OPERADOR_MAIS_IGUAL BIP
Rule 27    declaracao -> VARIAVEL OPERADOR_MAIS_IGUAL VARIAVEL
Rule 28    declaracao -> CASUS param_cond bloco
Rule 29    declaracao -> declaracao CASUS param_cond bloco
Rule 30    declaracao -> declaracao CASUS param_cond bloco senao
Rule 31    declaracao -> CASUS param_cond bloco senao
Rule 32    declaracao -> funcao PONTO_VIRGULA
Rule 33    declaracao -> impressao
Rule 34    declaracao -> escrita
Rule 35    declaracao -> funcao ABRE_CHAVES declaracoes FECHA_CHAVES
Rule 36    param_cond -> VARIAVEL OPERADOR_MENOR TOTUM
Rule 37    param_cond -> VARIAVEL OPERADOR_MENOR BIP
Rule 38    param_cond -> VARIAVEL OPERADOR_MENOR VARIAVEL
Rule 39    param_cond -> VARIAVEL OPERADOR_MAIOR TOTUM
Rule 40    param_cond -> VARIAVEL OPERADOR_MAIOR BIP
Rule 41    param_cond -> VARIAVEL OPERADOR_MAIOR VARIAVEL
Rule 42    param_cond -> VARIAVEL OPERADOR_MAIS_IGUAL TOTUM
Rule 43    param_cond -> VARIAVEL OPERADOR_MAIS_IGUAL BIP
Rule 44    param_cond -> VARIAVEL OPERADOR_MAIS_IGUAL VARIAVEL
Rule 45    param_cond -> VARIAVEL OPERADOR_IGUAL TOTUM
Rule 46    param_cond -> VARIAVEL OPERADOR_IGUAL BIP
Rule 47    param_cond -> VARIAVEL OPERADOR_IGUAL VARIAVEL
Rule 48    param_cond -> VARIAVEL OPERADOR_MAIOR_IGUAL TOTUM
Rule 49    param_cond -> VARIAVEL OPERADOR_MAIOR_IGUAL BIP
Rule 50    param_cond -> VARIAVEL OPERADOR_MAIOR_IGUAL VARIAVEL
Rule 51    param_cond -> VARIAVEL OPERADOR_MENOR_IGUAL TOTUM
Rule 52    param_cond -> VARIAVEL OPERADOR_MENOR_IGUAL BIP
Rule 53    param_cond -> VARIAVEL OPERADOR_MENOR_IGUAL VARIAVEL
Rule 54    impressao -> LEGERE expr PONTO_VIRGULA
Rule 55    impressao -> LEGERE expr ABRE_PARENTESES VERBUM VIRGULA VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
Rule 56    impressao -> LEGERE ABRE_PARENTESES VERBUM FECHA_PARENTESES PONTO_VIRGULA
Rule 57    impressao -> LEGERE ABRE_PARENTESES VERBUM VIRGULA VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
Rule 58    escrita -> VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES expr FECHA_PARENTESES PONTO_VIRGULA
Rule 59    escrita -> VARIAVEL OPERADOR_ATRIBUICAO param ABRE_PARENTESES SCRIBE ABRE_PARENTESES VERBUM FECHA_PARENTESES FECHA_PARENTESES PONTO_VIRGULA
Rule 60    escrita -> VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES VERBUM FECHA_PARENTESES PONTO_VIRGULA
Rule 61    escrita -> VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES VERBUM VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
Rule 62    expr -> VARIAVEL PONTO_VIRGULA
Rule 63    expr -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL OPERADOR_SOMA TOTUM PONTO_VIRGULA
Rule 64    expr -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL OPERADOR_SOMA VARIAVEL PONTO_VIRGULA
Rule 65    expr -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL OPERADOR_SUBTRACAO TOTUM PONTO_VIRGULA
Rule 66    expr -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL OPERADOR_SUBTRACAO VARIAVEL PONTO_VIRGULA
Rule 67    expr -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL OPERADOR_MULTIPLICACAO TOTUM PONTO_VIRGULA
Rule 68    expr -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL OPERADOR_MULTIPLICACAO VARIAVEL PONTO_VIRGULA
Rule 69    expr -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL OPERADOR_DIVISAO TOTUM PONTO_VIRGULA
Rule 70    expr -> VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL OPERADOR_DIVISAO VARIAVEL PONTO_VIRGULA
Rule 71    expr -> expr OPERADOR_SOMA expr
Rule 72    expr -> expr OPERADOR_SUBTRACAO expr
Rule 73    expr -> expr OPERADOR_MULTIPLICACAO expr
Rule 74    expr -> expr OPERADOR_DIVISAO expr
Rule 75    param_vazio -> <empty>
Rule 76    param -> TOTUM
Rule 77    param -> INT
Rule 78    param -> DECIMALE
Rule 79    param -> BIP
Rule 80    param -> VERBUM
Rule 81    param -> VARIAVEL
Rule 82    funcao -> ABRE_PARENTESES param_vazio FECHA_PARENTESES
Rule 83    funcao -> ABRE_PARENTESES param FECHA_PARENTESES
Rule 84    senao -> ALITER bloco

Terminals, with rules where they appear

ABRE_CHAVES          : 4 5 6 7 8 9 10 11 12 35
ABRE_PARENTESES      : 15 16 55 56 57 58 59 59 60 61 82 83
ALITER               : 84
BIP                  : 16 16 22 26 37 40 43 46 49 52 79
CASUS                : 28 29 30 31
DECIMALE             : 78
DUM                  : 13 14
FECHA_CHAVES         : 4 5 6 7 8 9 10 11 12 35
FECHA_PARENTESES     : 15 16 55 56 57 58 59 59 60 61 82 83
IN                   : 15 16
INT                  : 77
LEGERE               : 54 55 56 57
OPERADOR_ATRIBUICAO  : 17 18 19 20 21 21 22 23 24 58 59 60 61 63 64 65 66 67 68 69 70
OPERADOR_DIVISAO     : 69 70 74
OPERADOR_IGUAL       : 45 46 47
OPERADOR_MAIOR       : 39 40 41
OPERADOR_MAIOR_IGUAL : 48 49 50
OPERADOR_MAIS_IGUAL  : 25 26 27 42 43 44
OPERADOR_MENOR       : 36 37 38
OPERADOR_MENOR_IGUAL : 51 52 53
OPERADOR_MULTIPLICACAO : 67 68 73
OPERADOR_SOMA        : 63 64 71
OPERADOR_SUBTRACAO   : 65 66 72
PONTO_VIRGULA        : 10 11 17 18 19 20 21 21 22 23 24 32 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
SCRIBE               : 58 59 60 61
TO                   : 15 16
TOTUM                : 15 15 20 21 21 24 25 36 39 42 45 48 51 63 65 67 69 76
TRACTUS              : 15 16
VARIAVEL             : 15 16 17 18 19 19 20 21 21 22 23 24 25 26 27 27 36 37 38 38 39 40 41 41 42 43 44 44 45 46 47 47 48 49 50 50 51 52 53 53 55 57 58 59 60 61 61 62 63 63 64 64 64 65 65 66 66 66 67 67 68 68 68 69 69 70 70 70 81
VERBUM               : 18 55 56 57 59 60 61 80
VIRGULA              : 15 16 55 57
error                : 

Nonterminals, with rules where they appear

bloco                : 2 3 5 13 14 15 16 28 29 30 31 84
declaracao           : 1 2 5 14 29 30
declaracoes          : 4 35 0
escrita              : 7 8 8 9 9 34
expr                 : 9 12 17 54 55 58 71 71 72 72 73 73 74 74
funcao               : 23 32 35
impressao            : 6 7 8 9 10 11 12 33
param                : 24 59 83
param_cond           : 10 11 13 14 28 29 30 31
param_vazio          : 82
senao                : 30 31

Parsing method: LALR

state 0

    (0) S' -> . declaracoes
    (1) declaracoes -> . declaracao
    (2) declaracoes -> . declaracao bloco
    (3) declaracoes -> . bloco
    (13) declaracao -> . DUM param_cond bloco
    (14) declaracao -> . declaracao DUM param_cond bloco
    (15) declaracao -> . TO VARIAVEL IN TRACTUS ABRE_PARENTESES TOTUM VIRGULA TOTUM FECHA_PARENTESES bloco
    (16) declaracao -> . TO VARIAVEL IN TRACTUS ABRE_PARENTESES BIP VIRGULA BIP FECHA_PARENTESES bloco
    (17) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO expr PONTO_VIRGULA
    (18) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO VERBUM PONTO_VIRGULA
    (19) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL PONTO_VIRGULA
    (20) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
    (21) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
    (22) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO BIP PONTO_VIRGULA
    (23) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO funcao PONTO_VIRGULA
    (24) declaracao -> . param VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
    (25) declaracao -> . VARIAVEL OPERADOR_MAIS_IGUAL TOTUM
    (26) declaracao -> . VARIAVEL OPERADOR_MAIS_IGUAL BIP
    (27) declaracao -> . VARIAVEL OPERADOR_MAIS_IGUAL VARIAVEL
    (28) declaracao -> . CASUS param_cond bloco
    (29) declaracao -> . declaracao CASUS param_cond bloco
    (30) declaracao -> . declaracao CASUS param_cond bloco senao
    (31) declaracao -> . CASUS param_cond bloco senao
    (32) declaracao -> . funcao PONTO_VIRGULA
    (33) declaracao -> . impressao
    (34) declaracao -> . escrita
    (35) declaracao -> . funcao ABRE_CHAVES declaracoes FECHA_CHAVES
    (4) bloco -> . ABRE_CHAVES declaracoes FECHA_CHAVES
    (5) bloco -> . ABRE_CHAVES declaracao bloco FECHA_CHAVES
    (6) bloco -> . ABRE_CHAVES impressao FECHA_CHAVES
    (7) bloco -> . ABRE_CHAVES escrita impressao FECHA_CHAVES
    (8) bloco -> . ABRE_CHAVES escrita escrita impressao FECHA_CHAVES
    (9) bloco -> . ABRE_CHAVES escrita escrita expr impressao FECHA_CHAVES
    (10) bloco -> . ABRE_CHAVES impressao param_cond PONTO_VIRGULA FECHA_CHAVES
    (11) bloco -> . ABRE_CHAVES param_cond PONTO_VIRGULA impressao FECHA_CHAVES
    (12) bloco -> . ABRE_CHAVES impressao expr FECHA_CHAVES
    (76) param -> . TOTUM
    (77) param -> . INT
    (78) param -> . DECIMALE
    (79) param -> . BIP
    (80) param -> . VERBUM
    (81) param -> . VARIAVEL
    (82) funcao -> . ABRE_PARENTESES param_vazio FECHA_PARENTESES
    (83) funcao -> . ABRE_PARENTESES param FECHA_PARENTESES
    (54) impressao -> . LEGERE expr PONTO_VIRGULA
    (55) impressao -> . LEGERE expr ABRE_PARENTESES VERBUM VIRGULA VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
    (56) impressao -> . LEGERE ABRE_PARENTESES VERBUM FECHA_PARENTESES PONTO_VIRGULA
    (57) impressao -> . LEGERE ABRE_PARENTESES VERBUM VIRGULA VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
    (58) escrita -> . VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES expr FECHA_PARENTESES PONTO_VIRGULA
    (59) escrita -> . VARIAVEL OPERADOR_ATRIBUICAO param ABRE_PARENTESES SCRIBE ABRE_PARENTESES VERBUM FECHA_PARENTESES FECHA_PARENTESES PONTO_VIRGULA
    (60) escrita -> . VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES VERBUM FECHA_PARENTESES PONTO_VIRGULA
    (61) escrita -> . VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES VERBUM VARIAVEL FECHA_PARENTESES PONTO_VIRGULA

    DUM             shift and go to state 4
    TO              shift and go to state 5
    VARIAVEL        shift and go to state 6
    CASUS           shift and go to state 13
    ABRE_CHAVES     shift and go to state 16
    TOTUM           shift and go to state 8
    INT             shift and go to state 17
    DECIMALE        shift and go to state 18
    BIP             shift and go to state 9
    VERBUM          shift and go to state 10
    ABRE_PARENTESES shift and go to state 7
    LEGERE          shift and go to state 19

    declaracoes                    shift and go to state 1
    declaracao                     shift and go to state 2
    bloco                          shift and go to state 3
    funcao                         shift and go to state 11
    param                          shift and go to state 12
    impressao                      shift and go to state 14
    escrita                        shift and go to state 15

state 1

    (0) S' -> declaracoes .



state 2

    (1) declaracoes -> declaracao .
    (2) declaracoes -> declaracao . bloco
    (14) declaracao -> declaracao . DUM param_cond bloco
    (29) declaracao -> declaracao . CASUS param_cond bloco
    (30) declaracao -> declaracao . CASUS param_cond bloco senao
    (4) bloco -> . ABRE_CHAVES declaracoes FECHA_CHAVES
    (5) bloco -> . ABRE_CHAVES declaracao bloco FECHA_CHAVES
    (6) bloco -> . ABRE_CHAVES impressao FECHA_CHAVES
    (7) bloco -> . ABRE_CHAVES escrita impressao FECHA_CHAVES
    (8) bloco -> . ABRE_CHAVES escrita escrita impressao FECHA_CHAVES
    (9) bloco -> . ABRE_CHAVES escrita escrita expr impressao FECHA_CHAVES
    (10) bloco -> . ABRE_CHAVES impressao param_cond PONTO_VIRGULA FECHA_CHAVES
    (11) bloco -> . ABRE_CHAVES param_cond PONTO_VIRGULA impressao FECHA_CHAVES
    (12) bloco -> . ABRE_CHAVES impressao expr FECHA_CHAVES

    $end            reduce using rule 1 (declaracoes -> declaracao .)
    FECHA_CHAVES    reduce using rule 1 (declaracoes -> declaracao .)
    DUM             shift and go to state 21
    CASUS           shift and go to state 22
    ABRE_CHAVES     shift and go to state 16

    bloco                          shift and go to state 20

state 3

    (3) declaracoes -> bloco .

    $end            reduce using rule 3 (declaracoes -> bloco .)
    FECHA_CHAVES    reduce using rule 3 (declaracoes -> bloco .)


state 4

    (13) declaracao -> DUM . param_cond bloco
    (36) param_cond -> . VARIAVEL OPERADOR_MENOR TOTUM
    (37) param_cond -> . VARIAVEL OPERADOR_MENOR BIP
    (38) param_cond -> . VARIAVEL OPERADOR_MENOR VARIAVEL
    (39) param_cond -> . VARIAVEL OPERADOR_MAIOR TOTUM
    (40) param_cond -> . VARIAVEL OPERADOR_MAIOR BIP
    (41) param_cond -> . VARIAVEL OPERADOR_MAIOR VARIAVEL
    (42) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL TOTUM
    (43) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL BIP
    (44) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL VARIAVEL
    (45) param_cond -> . VARIAVEL OPERADOR_IGUAL TOTUM
    (46) param_cond -> . VARIAVEL OPERADOR_IGUAL BIP
    (47) param_cond -> . VARIAVEL OPERADOR_IGUAL VARIAVEL
    (48) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL TOTUM
    (49) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL BIP
    (50) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL VARIAVEL
    (51) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL TOTUM
    (52) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL BIP
    (53) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL VARIAVEL

    VARIAVEL        shift and go to state 24

    param_cond                     shift and go to state 23

state 5

    (15) declaracao -> TO . VARIAVEL IN TRACTUS ABRE_PARENTESES TOTUM VIRGULA TOTUM FECHA_PARENTESES bloco
    (16) declaracao -> TO . VARIAVEL IN TRACTUS ABRE_PARENTESES BIP VIRGULA BIP FECHA_PARENTESES bloco

    VARIAVEL        shift and go to state 25


state 6

    (17) declaracao -> VARIAVEL . OPERADOR_ATRIBUICAO expr PONTO_VIRGULA
    (18) declaracao -> VARIAVEL . OPERADOR_ATRIBUICAO VERBUM PONTO_VIRGULA
    (19) declaracao -> VARIAVEL . OPERADOR_ATRIBUICAO VARIAVEL PONTO_VIRGULA
    (20) declaracao -> VARIAVEL . OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
    (21) declaracao -> VARIAVEL . OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
    (22) declaracao -> VARIAVEL . OPERADOR_ATRIBUICAO BIP PONTO_VIRGULA
    (23) declaracao -> VARIAVEL . OPERADOR_ATRIBUICAO funcao PONTO_VIRGULA
    (25) declaracao -> VARIAVEL . OPERADOR_MAIS_IGUAL TOTUM
    (26) declaracao -> VARIAVEL . OPERADOR_MAIS_IGUAL BIP
    (27) declaracao -> VARIAVEL . OPERADOR_MAIS_IGUAL VARIAVEL
    (81) param -> VARIAVEL .
    (58) escrita -> VARIAVEL . OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES expr FECHA_PARENTESES PONTO_VIRGULA
    (59) escrita -> VARIAVEL . OPERADOR_ATRIBUICAO param ABRE_PARENTESES SCRIBE ABRE_PARENTESES VERBUM FECHA_PARENTESES FECHA_PARENTESES PONTO_VIRGULA
    (60) escrita -> VARIAVEL . OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES VERBUM FECHA_PARENTESES PONTO_VIRGULA
    (61) escrita -> VARIAVEL . OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES VERBUM VARIAVEL FECHA_PARENTESES PONTO_VIRGULA

    OPERADOR_ATRIBUICAO shift and go to state 26
    OPERADOR_MAIS_IGUAL shift and go to state 27
    VARIAVEL        reduce using rule 81 (param -> VARIAVEL .)


state 7

    (82) funcao -> ABRE_PARENTESES . param_vazio FECHA_PARENTESES
    (83) funcao -> ABRE_PARENTESES . param FECHA_PARENTESES
    (75) param_vazio -> .
    (76) param -> . TOTUM
    (77) param -> . INT
    (78) param -> . DECIMALE
    (79) param -> . BIP
    (80) param -> . VERBUM
    (81) param -> . VARIAVEL

    FECHA_PARENTESES reduce using rule 75 (param_vazio -> .)
    TOTUM           shift and go to state 8
    INT             shift and go to state 17
    DECIMALE        shift and go to state 18
    BIP             shift and go to state 9
    VERBUM          shift and go to state 10
    VARIAVEL        shift and go to state 30

    param_vazio                    shift and go to state 28
    param                          shift and go to state 29

state 8

    (76) param -> TOTUM .

    VARIAVEL        reduce using rule 76 (param -> TOTUM .)
    FECHA_PARENTESES reduce using rule 76 (param -> TOTUM .)
    ABRE_PARENTESES reduce using rule 76 (param -> TOTUM .)


state 9

    (79) param -> BIP .

    VARIAVEL        reduce using rule 79 (param -> BIP .)
    FECHA_PARENTESES reduce using rule 79 (param -> BIP .)
    ABRE_PARENTESES reduce using rule 79 (param -> BIP .)


state 10

    (80) param -> VERBUM .

    VARIAVEL        reduce using rule 80 (param -> VERBUM .)
    FECHA_PARENTESES reduce using rule 80 (param -> VERBUM .)
    ABRE_PARENTESES reduce using rule 80 (param -> VERBUM .)


state 11

    (32) declaracao -> funcao . PONTO_VIRGULA
    (35) declaracao -> funcao . ABRE_CHAVES declaracoes FECHA_CHAVES

    PONTO_VIRGULA   shift and go to state 31
    ABRE_CHAVES     shift and go to state 32


state 12

    (24) declaracao -> param . VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA

    VARIAVEL        shift and go to state 33


state 13

    (28) declaracao -> CASUS . param_cond bloco
    (31) declaracao -> CASUS . param_cond bloco senao
    (36) param_cond -> . VARIAVEL OPERADOR_MENOR TOTUM
    (37) param_cond -> . VARIAVEL OPERADOR_MENOR BIP
    (38) param_cond -> . VARIAVEL OPERADOR_MENOR VARIAVEL
    (39) param_cond -> . VARIAVEL OPERADOR_MAIOR TOTUM
    (40) param_cond -> . VARIAVEL OPERADOR_MAIOR BIP
    (41) param_cond -> . VARIAVEL OPERADOR_MAIOR VARIAVEL
    (42) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL TOTUM
    (43) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL BIP
    (44) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL VARIAVEL
    (45) param_cond -> . VARIAVEL OPERADOR_IGUAL TOTUM
    (46) param_cond -> . VARIAVEL OPERADOR_IGUAL BIP
    (47) param_cond -> . VARIAVEL OPERADOR_IGUAL VARIAVEL
    (48) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL TOTUM
    (49) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL BIP
    (50) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL VARIAVEL
    (51) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL TOTUM
    (52) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL BIP
    (53) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL VARIAVEL

    VARIAVEL        shift and go to state 24

    param_cond                     shift and go to state 34

state 14

    (33) declaracao -> impressao .

    DUM             reduce using rule 33 (declaracao -> impressao .)
    CASUS           reduce using rule 33 (declaracao -> impressao .)
    ABRE_CHAVES     reduce using rule 33 (declaracao -> impressao .)
    $end            reduce using rule 33 (declaracao -> impressao .)
    FECHA_CHAVES    reduce using rule 33 (declaracao -> impressao .)


state 15

    (34) declaracao -> escrita .

    DUM             reduce using rule 34 (declaracao -> escrita .)
    CASUS           reduce using rule 34 (declaracao -> escrita .)
    ABRE_CHAVES     reduce using rule 34 (declaracao -> escrita .)
    $end            reduce using rule 34 (declaracao -> escrita .)
    FECHA_CHAVES    reduce using rule 34 (declaracao -> escrita .)


state 16

    (4) bloco -> ABRE_CHAVES . declaracoes FECHA_CHAVES
    (5) bloco -> ABRE_CHAVES . declaracao bloco FECHA_CHAVES
    (6) bloco -> ABRE_CHAVES . impressao FECHA_CHAVES
    (7) bloco -> ABRE_CHAVES . escrita impressao FECHA_CHAVES
    (8) bloco -> ABRE_CHAVES . escrita escrita impressao FECHA_CHAVES
    (9) bloco -> ABRE_CHAVES . escrita escrita expr impressao FECHA_CHAVES
    (10) bloco -> ABRE_CHAVES . impressao param_cond PONTO_VIRGULA FECHA_CHAVES
    (11) bloco -> ABRE_CHAVES . param_cond PONTO_VIRGULA impressao FECHA_CHAVES
    (12) bloco -> ABRE_CHAVES . impressao expr FECHA_CHAVES
    (1) declaracoes -> . declaracao
    (2) declaracoes -> . declaracao bloco
    (3) declaracoes -> . bloco
    (13) declaracao -> . DUM param_cond bloco
    (14) declaracao -> . declaracao DUM param_cond bloco
    (15) declaracao -> . TO VARIAVEL IN TRACTUS ABRE_PARENTESES TOTUM VIRGULA TOTUM FECHA_PARENTESES bloco
    (16) declaracao -> . TO VARIAVEL IN TRACTUS ABRE_PARENTESES BIP VIRGULA BIP FECHA_PARENTESES bloco
    (17) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO expr PONTO_VIRGULA
    (18) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO VERBUM PONTO_VIRGULA
    (19) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO VARIAVEL PONTO_VIRGULA
    (20) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
    (21) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
    (22) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO BIP PONTO_VIRGULA
    (23) declaracao -> . VARIAVEL OPERADOR_ATRIBUICAO funcao PONTO_VIRGULA
    (24) declaracao -> . param VARIAVEL OPERADOR_ATRIBUICAO TOTUM PONTO_VIRGULA
    (25) declaracao -> . VARIAVEL OPERADOR_MAIS_IGUAL TOTUM
    (26) declaracao -> . VARIAVEL OPERADOR_MAIS_IGUAL BIP
    (27) declaracao -> . VARIAVEL OPERADOR_MAIS_IGUAL VARIAVEL
    (28) declaracao -> . CASUS param_cond bloco
    (29) declaracao -> . declaracao CASUS param_cond bloco
    (30) declaracao -> . declaracao CASUS param_cond bloco senao
    (31) declaracao -> . CASUS param_cond bloco senao
    (32) declaracao -> . funcao PONTO_VIRGULA
    (33) declaracao -> . impressao
    (34) declaracao -> . escrita
    (35) declaracao -> . funcao ABRE_CHAVES declaracoes FECHA_CHAVES
    (54) impressao -> . LEGERE expr PONTO_VIRGULA
    (55) impressao -> . LEGERE expr ABRE_PARENTESES VERBUM VIRGULA VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
    (56) impressao -> . LEGERE ABRE_PARENTESES VERBUM FECHA_PARENTESES PONTO_VIRGULA
    (57) impressao -> . LEGERE ABRE_PARENTESES VERBUM VIRGULA VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
    (58) escrita -> . VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES expr FECHA_PARENTESES PONTO_VIRGULA
    (59) escrita -> . VARIAVEL OPERADOR_ATRIBUICAO param ABRE_PARENTESES SCRIBE ABRE_PARENTESES VERBUM FECHA_PARENTESES FECHA_PARENTESES PONTO_VIRGULA
    (60) escrita -> . VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES VERBUM FECHA_PARENTESES PONTO_VIRGULA
    (61) escrita -> . VARIAVEL OPERADOR_ATRIBUICAO SCRIBE ABRE_PARENTESES VERBUM VARIAVEL FECHA_PARENTESES PONTO_VIRGULA
    (36) param_cond -> . VARIAVEL OPERADOR_MENOR TOTUM
    (37) param_cond -> . VARIAVEL OPERADOR_MENOR BIP
    (38) param_cond -> . VARIAVEL OPERADOR_MENOR VARIAVEL
    (39) param_cond -> . VARIAVEL OPERADOR_MAIOR TOTUM
    (40) param_cond -> . VARIAVEL OPERADOR_MAIOR BIP
    (41) param_cond -> . VARIAVEL OPERADOR_MAIOR VARIAVEL
    (42) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL TOTUM
    (43) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL BIP
    (44) param_cond -> . VARIAVEL OPERADOR_MAIS_IGUAL VARIAVEL
    (45) param_cond -> . VARIAVEL OPERADOR_IGUAL TOTUM
    (46) param_cond -> . VARIAVEL OPERADOR_IGUAL BIP
    (47) param_cond -> . VARIAVEL OPERADOR_IGUAL VARIAVEL
    (48) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL TOTUM
    (49) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL BIP
    (50) param_cond -> . VARIAVEL OPERADOR_MAIOR_IGUAL VARIAVEL
    (51) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL TOTUM
    (52) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL BIP
    (53) param_cond -> . VARIAVEL OPERADOR_MENOR_IGUAL VARIAVEL
    (4) bloco -> . ABRE_CHAVES declaracoes FECHA_CHAVES
    (5) bloco -> . ABRE_CHAVES declaracao bloco FECHA_CHAVES
    (6) bloco -> . ABRE_CHAVES impressao FECHA_CHAVES
    (7) bloco -> . ABRE_CHAVES escrita impressao FECHA_CHAVES
    (8) bloco -> . ABRE_CHAVES escrita escrita impressao FECHA_CHAVES
    (9) bloco -> . ABRE_CHAVES escrita escrita expr impressao FECHA_CHAVES
    (10) bloco -> . ABRE_CHAVES impressao param_cond PONTO_VIRGULA FECHA_CHAVES
    (11) bloco -> . ABRE_CHAVES param_cond PONTO_VIRGULA impressao FECHA_CHAVES
    (12) bloco -> . ABRE_CHAVES impressao expr FECHA_CHAVES
    (76) param -> . TOTUM
    (77) param -> . INT
    (78) param -> . DECIMALE
    (79) param -> . BIP
    (80) param -> . VERBUM
    (81) param -> . VARIAVEL
    (82) funcao -> . ABRE_PARENTESES param_vazio FECHA_PARENTESES
    (83) funcao -> . ABRE_PARENTESES param FECHA_PARENTESES

    DUM             shift and go to state 4
    TO              shift and go to state 5
